# SAbIA-Tutorials-CNPEM-2025

./: LICENSE  README.md
.github/workflows/: AL-tutorial.yml  ML-electronic-structure.yml  PIMD-tutorial.yml
AL-tutorial/: README.md  environment.yaml  pyproject.toml
AL-tutorial/aims/: control.in
AL-tutorial/files/: QbC.pptx
AL-tutorial/initial-datasets/zundel/: control.in  run-me.py
AL-tutorial/ipi-examples/eigen-inference/: input.xml  input_ffcommittee.xml
AL-tutorial/ipi-examples/zundel-inference/: README.md  eigen-inference.extxyz  run.sh
AL-tutorial/notebooks/: 1-zundel.ipynb  2-eigen.ipynb  eigen-initial.extxyz  myfunctions.py  train-template.yaml  unzip.sh
Active-learning-MLIPs/: .gitignore
Active-learning-MLIPs/aims/: geometry.in  species.intermediate.in
Active-learning-MLIPs/files/: notebook.mplstyle
Active-learning-MLIPs/ipi-examples/: post-process.py
Active-learning-MLIPs/notebooks/: clean.sh  qbc-output.txt  zip.sh
Active-learning-MLIPs/tests/: check.py
ML-electronic-structure/: .gitignore  README.md
ML-electronic-structure/SALTED-tutorial/: salted-notebook.ipynb
Path-integral-MD/: README.md  requirements.txt
Path-integral-MD/01-Introduction (slides)/: slides.tex
Path-integral-MD/02-Constant-pressure-PIMD/: 01-constant_pressure.ipynb  slides.ipynb
Path-integral-MD/02-free-energy/: tutorial_free_energy.ipynb
Path-integral-MD/03-Free-energy-calculations/: slides_free_energy.ipynb
Path-integral-MD/ipitools/: utils_free_energy_tutorial.py
Path-integral-MD/slides/graphics/: clHO-1.eps  (+1 more)
Path-integral-MD/tests/: check.py
(+27 files in other folders)
